[package]
name = "test-suite"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
libsqlite3-sys = { version = "0.32.0", features = ["bundled"] }

[dev-dependencies]
anyhow = "1.0.97"
hex = "0.4.3"
rusqlite = { version = "0.34.0", features = ["bundled-full"] }
sqlite_dbhash = { path = "../" }

[build-dependencies]
cc = "1.2.16"
